--- a/web-app/css/mifos-screen.css
+++ b/web-app/css/mifos-screen.css
@@ -37,7 +37,7 @@ table {
 	border-collapse:separate;
 	border-spacing:0;
 }
-caption, th, td {
+caption {
 	text-align:left;
 	font-weight:normal;
 }
